--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
     "autoprefixer": "^10.4.14",
-    "next": "^13.4.12",
+    "lucide-react": "^0.507.0",
+    "next": "^15.3.1",
     "papaparse": "^5.5.2",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
