--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.11",
     "@supabase/supabase-js": "^2.49.4",
     "autoprefixer": "^10.4.14",
+    "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.507.0",
     "next": "^15.3.1",
     "papaparse": "^5.5.2",
